[package]
name = "rust_cascade"
description = "A simple mmh3 based bloom filter cascade implementation in Rust."
license = "MPL-2.0"
version = "0.6.0"
authors = ["Mark Goodwin <mgoodwin@mozilla.com>", "Dana Keeler <dkeeler@mozilla.com>", "J.C. Jones <jc@mozilla.com>"]
documentation = "https://docs.rs/rust_cascade/"
homepage = "https://github.com/mozilla/rust-cascade"
repository = "https://github.com/mozilla/rust-cascade"

[dependencies]
byteorder="1.3.1"
digest="0.8.0"
murmurhash3 = "0.0.5"
sha2="^0.8"
