[package]
name = "rust_cascade"
description = "A simple bloom filter cascade implementation in Rust."
license = "MPL-2.0"
version = "1.3.0"
authors = ["Mark Goodwin <mgoodwin@mozilla.com>", "Dana Keeler <dkeeler@mozilla.com>", "J.C. Jones <jc@mozilla.com>", "John Schanck <jschanck@mozilla.com>"]
documentation = "https://docs.rs/rust_cascade/"
homepage = "https://github.com/mozilla/rust-cascade"
repository = "https://github.com/mozilla/rust-cascade"
rust-version = "1.61"

[dependencies]
byteorder="1.3.1"
murmurhash3 = "0.0.5"
sha2="0.10.2"
rand="0.7.3"
